--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,7 +19,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 RUN go mod tidy
 
-RUN go build -o crud-api cmd/crud-api/main.go
+RUN go build -o bin/crud-api cmd/crud-api/main.go
 
 EXPOSE 8080
 
