:bricks: melhorando estrutura do ambiente docker

--- a/.air.toml
+++ b/.air.toml
@@ -4,8 +4,8 @@ tmp_dir = "tmp"
 
 [build]
   args_bin = []
-  bin = "./tmp/crud-api"
-  cmd = "go build -o tmp/crud-api cmd/crud-api/main.go"
+  bin = "./tmp/${APP_NAME}"
+  cmd = "go build -o tmp/${APP_NAME} cmd/server/main.go"
   delay = 0
   exclude_dir = ["assets", "tmp", "vendor", "testdata"]
   exclude_file = []
