--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM golang:latest
+FROM golang:1.20.2
 
 WORKDIR /app
 
@@ -19,7 +19,7 @@ COPY go.mod go.sum ./
 RUN go mod download
 RUN go mod tidy
 
-RUN go build -o bin/crud-api cmd/crud-api/main.go
+RUN go build -o bin/${APP_NAME} cmd/server/main.go
 
 EXPOSE 8080
 
